<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="click"
            type="ylc.love.wxj.com.ui.create.mood.CreateMoodActivity.ClickProxy" />
        <variable
            name="vm"
            type="ylc.love.wxj.com.ui.create.mood.CreateMoodViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ylc.love.wxj.com.widget.AppTitle
            titleBack="@{()->click.back()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/create_mood_diary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_size_50"
            android:layout_marginTop="@dimen/widget_size_10"
            android:background="@color/white"
            android:orientation="horizontal">

            <ylc.love.wxj.com.widget.AppTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/widget_size_15"
                android:gravity="center_vertical"
                android:text="@string/title"
                android:textColor="@color/color_666"
                android:textSize="@dimen/font_size_16" />

            <ylc.love.wxj.com.widget.AppEditText
                android:id="@+id/et_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="end|center_vertical"
                android:hint="@string/input_title"
                android:inputType="text"
                android:paddingEnd="@dimen/widget_size_15"
                android:textColor="@color/color_666"
                android:textColorHint="@color/color_999"
                android:textSize="@dimen/font_size_16"
                addTextChangeListener="@{vm.titleWatcher}"
                tools:ignore="Autofill,RtlSymmetry" />
        </LinearLayout>

        <ylc.love.wxj.com.widget.AppEditText
            android:id="@+id/et_mood"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_size_300"
            android:layout_marginTop="@dimen/widget_size_1"
            android:background="@color/white"
            android:gravity="start"
            android:hint="@string/edit_mood"
            android:inputType="textMultiLine"
            android:textSize="@dimen/font_size_18"
            android:padding="@dimen/widget_size_15"
            addTextChangeListener="@{vm.contentWatcher}"
            android:textColor="@color/color_666"
            android:textColorHint="@color/color_999"
            tools:ignore="Autofill" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ylc.love.wxj.com.widget.AppButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:onClick="@{()->click.saveMood()}"
            android:layout_height="@dimen/widget_size_50"
            android:layout_margin="@dimen/widget_size_15"
            android:textSize="@dimen/font_size_18"
            android:text="@string/save"/>
    </LinearLayout>
</layout>