<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="click"
            type="ylc.love.wxj.com.ui.create.CreateEventActivity.ClickProxy" />

        <variable
            name="vm"
            type="ylc.love.wxj.com.ui.create.CreateEventViewModel" />

        <variable
            name="view"
            type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ylc.love.wxj.com.widget.AppTitle
            android:id="@+id/app_title"
            app:title="@string/create_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:paddingStart="@dimen/widget_size_15"
            android:paddingEnd="@dimen/widget_size_15"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_size_55"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_title_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/event_title"
                android:textColor="@color/color_666"
                android:textSize="@dimen/font_size_16" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/widget_size_30"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/widget_size_15"
                android:layout_toEndOf="@+id/tv_title_key"
                android:background="@null"
                android:gravity="center|end"
                android:hint="@string/input_title"
                android:inputType="text"
                android:text="@{vm.eventTitle}"
                android:textColor="@color/color_666"
                android:textColorHint="@color/color_aaa"
                android:textSize="@dimen/font_size_16"
                tools:ignore="Autofill,LabelFor,RtlHardcoded,RtlSymmetry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/widget_min_size_1"
                android:layout_alignParentBottom="true"
                android:background="@color/line_color" />
        </RelativeLayout>


        <RelativeLayout
            android:paddingStart="@dimen/widget_size_15"
            android:paddingEnd="@dimen/widget_size_15"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_size_55"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_event_type_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/event_type"
                android:textColor="@color/color_666"
                android:textSize="@dimen/font_size_16" />

            <ylc.love.wxj.com.widget.DrawableTextView
                android:id="@+id/tv_event_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:onClick="@{()->click.clickEventType()}"
                android:textColor="@color/color_999"
                android:textSize="@dimen/font_size_16"
                app:drawableHeight="@dimen/widget_size_15"
                app:drawableRight="@drawable/icon_arrow_down"
                app:drawableWidth="@dimen/widget_size_15"
                tools:ignore="RelativeOverlap"
                tools:text="阿萨德离开" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/widget_min_size_1"
                android:layout_alignParentBottom="true"
                android:background="@color/line_color" />
        </RelativeLayout>


        <RelativeLayout
            android:paddingStart="@dimen/widget_size_15"
            android:paddingEnd="@dimen/widget_size_15"
            android:id="@+id/rl_bill_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_size_55"
            android:visibility="@{vm.isBillType()?view.VISIBLE:view.GONE}">

            <TextView
                android:id="@+id/tv_bill_type_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/bill_type"
                android:textColor="@color/color_666"
                android:textSize="@dimen/font_size_16" />

            <ylc.love.wxj.com.widget.DrawableTextView
                android:id="@+id/tv_bill_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:onClick="@{()->click.clickBillType()}"
                android:textColor="@color/color_999"
                android:textSize="@dimen/font_size_16"
                app:drawableHeight="@dimen/widget_size_15"
                app:drawableRight="@drawable/icon_arrow_down"
                app:drawableWidth="@dimen/widget_size_15"
                tools:ignore="RelativeOverlap"
                tools:text="账单类型" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/widget_min_size_1"
                android:layout_alignParentBottom="true"
                android:background="@color/line_color" />
        </RelativeLayout>

        <RelativeLayout
            android:paddingStart="@dimen/widget_size_15"
            android:paddingEnd="@dimen/widget_size_15"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_size_55">

            <TextView
                android:id="@+id/tv_event_time_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/event_time"
                android:textColor="@color/color_666"
                android:textSize="@dimen/font_size_16" />

            <ylc.love.wxj.com.widget.DrawableTextView
                android:id="@+id/tv_event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:onClick="@{()->click.selectDate()}"
                android:textColor="@color/color_999"
                android:textSize="@dimen/font_size_16"
                app:drawableHeight="@dimen/widget_size_15"
                app:drawableRight="@drawable/icon_arrow_down"
                app:drawableWidth="@dimen/widget_size_15"
                tools:ignore="RelativeOverlap"
                tools:text="2021-01-28" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/widget_min_size_1"
                android:layout_alignParentBottom="true"
                android:background="@color/line_color" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_des_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/widget_size_15"
            android:text="@string/event_des"
            android:layout_marginStart="@dimen/widget_size_15"
            android:textColor="@color/color_666"
            android:textSize="@dimen/font_size_16" />

        <EditText
            android:layout_marginStart="@dimen/widget_size_15"
            android:layout_marginEnd="@dimen/widget_size_15"
            android:id="@+id/et_des"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/widget_size_15"
            android:layout_marginBottom="@dimen/widget_size_15"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/input_event_detail"
            android:inputType="text"
            android:text="@{vm.eventDes}"
            android:textColor="@color/color_666"
            android:textColorHint="@color/color_aaa"
            android:textSize="@dimen/font_size_16"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_size_50"
            android:onClick="@{()->click.saveEvent()}"
            android:text="@string/save"
            android:textSize="@dimen/font_size_18"
            android:layout_marginBottom="@dimen/widget_size_15"
            android:layout_marginStart="@dimen/widget_size_15"
            android:layout_marginEnd="@dimen/widget_size_15"
            android:textStyle="bold" />
    </LinearLayout>

</layout>