<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="click"
            type="ylc.love.wxj.com.ui.date.CreateDateFragment.ClickProxy" />
        <variable
            name="bean"
            type="ylc.love.wxj.com.model.DateBean" />
        <variable
            name="vm"
            type="ylc.love.wxj.com.ui.date.CreateDateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/date_title"
            android:textColor="@color/color_333"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/et_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:inputType="text"
            android:paddingStart="15dp"
            app:flow_horizontalStyle="spread_inside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields" />

        <TextView
            android:id="@+id/tv_selected_date"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/select_date"
            android:textColor="@color/color_333"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <ylc.love.wxj.com.widget.DrawableTextView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center|end"
            android:textColor="@color/color_333"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableHeight="30dp"
            app:drawableRight="@drawable/vector_drawable_icon_right_more"
            app:drawableWidth="30dp"
            android:onClick="@{()->click.selectDate()}"
            app:flow_horizontalStyle="spread_inside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/et_title" />

        <TextView
            android:id="@+id/tv_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textColor="@color/color_333"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_selected_date" />

        <EditText
            android:id="@+id/et_des"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:hint="@string/input_des"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/tv_des"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/save"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="@{()->click.save()}"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>